--- a/source/Appccelerate.StateMachine.Specs/Appccelerate.StateMachine.Specs.csproj
+++ b/source/Appccelerate.StateMachine.Specs/Appccelerate.StateMachine.Specs.csproj
@@ -73,7 +73,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Async\AsyncPassiveStateMachines.cs" />
+    <Compile Include="Async\CustomTypes.cs" />
+    <Compile Include="Async\ExceptionHandling.cs" />
+    <Compile Include="Async\HierarchicalStateMachineInitialization.cs" />
     <Compile Include="Async\HierarchicalTransitions.cs" />
+    <Compile Include="Async\Initialization.cs" />
+    <Compile Include="Async\Persisting.cs" />
+    <Compile Include="Async\RecordEventsExtension.cs" />
+    <Compile Include="Async\Reporting.cs" />
+    <Compile Include="Async\StartStop.cs" />
     <Compile Include="Async\StateMachineNameReporter.cs" />
     <Compile Include="Sync\ActiveStateMachines.cs" />
     <Compile Include="Async\CurrentStateExtension.cs" />
