Use CofigureAwait.Fody in Facts and Specs

--- a/source/Appccelerate.StateMachine.Facts/packages.config
+++ b/source/Appccelerate.StateMachine.Facts/packages.config
@@ -6,8 +6,10 @@
   <package id="Appccelerate.Development.Facts" version="2.1.0" targetFramework="net45" developmentDependency="true" />
   <package id="Appccelerate.Development.xUnit" version="2.1.0" targetFramework="net45" developmentDependency="true" />
   <package id="Appccelerate.VersionTask" version="1.22.0" targetFramework="net45" developmentDependency="true" />
+  <package id="ConfigureAwait.Fody" version="1.1.0" targetFramework="net462" developmentDependency="true" />
   <package id="FakeItEasy" version="3.3.2" targetFramework="net45" />
   <package id="FluentAssertions" version="4.19.2" targetFramework="net45" />
+  <package id="Fody" version="2.1.0" targetFramework="net462" developmentDependency="true" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net45" developmentDependency="true" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
   <package id="xunit.core" version="2.1.0" targetFramework="net45" />
