--- a/source/Appccelerate.StateMachine/appccelerate.statemachine.nuspec
+++ b/source/Appccelerate.StateMachine/appccelerate.statemachine.nuspec
@@ -21,6 +21,20 @@
       extensible thorough logging,
       state machine report for description of state machine (csv, yEd)</description>
     <releaseNotes>
+      4.4.0:
+      - back to .net standard 1.0
+      - fixed nuget package containing wrong assembly
+
+      4.0.0:
+      - adds AsyncPassiveStateMachine that supports async/await for transition actions, entry/exit actions, guards and save/load.
+      - targets .net standard 1.3 to support async/await
+
+      3.3.0: 
+      - fixed: wrong target framework was specified in nuget package. Now targets .net standard 1.0 
+
+      3.2.0: 
+      - targets now .net standard 1.0 so you can use the state machine almost anywhere .net exists 
+      - fixed a bug when passing a 'null' argument to the state machine
     </releaseNotes>
     <copyright>Copyright 2012-2017</copyright>
     <tags>Appccelerate state-machine</tags>
