--- a/source/Appccelerate.StateMachine/Appccelerate.StateMachine.csproj
+++ b/source/Appccelerate.StateMachine/Appccelerate.StateMachine.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <PackageReference Include="Appccelerate.Development" Version="2.1.0" />
     <PackageReference Include="Appccelerate.VersionTask" Version="1.22.0" />
+    <PackageReference Include="ConfigureAwaitChecker.Analyzer" Version="1.0.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.0.0" />
   </ItemGroup>
 
