--- a/source/Appccelerate.StateMachine.Specs/packages.config
+++ b/source/Appccelerate.StateMachine.Specs/packages.config
@@ -12,9 +12,9 @@
   <package id="Fody" version="2.1.0" targetFramework="net462" developmentDependency="true" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net45" developmentDependency="true" />
   <package id="Xbehave.Core" version="2.1.4" targetFramework="net45" />
-  <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.core" version="2.1.0" targetFramework="net45" />
-  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net45" />
-  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net45" />
-  <package id="xunit.runner.msbuild" version="2.1.0" targetFramework="net45" />
+  <package id="xunit.abstractions" version="2.0.3" targetFramework="net462" />
+  <package id="xunit.core" version="2.4.1" targetFramework="net462" />
+  <package id="xunit.extensibility.core" version="2.4.1" targetFramework="net462" />
+  <package id="xunit.extensibility.execution" version="2.4.1" targetFramework="net462" />
+  <package id="xunit.runner.msbuild" version="2.4.1" targetFramework="net462" developmentDependency="true" />
 </packages>
