--- a/source/Appccelerate.StateMachine/Appccelerate.StateMachine.csproj
+++ b/source/Appccelerate.StateMachine/Appccelerate.StateMachine.csproj
@@ -36,7 +36,10 @@
     <PackageReference Include="Appccelerate.Development" Version="2.1.0" />
     <PackageReference Include="Appccelerate.VersionTask" Version="1.22.0" />
     <PackageReference Include="ConfigureAwaitChecker.Analyzer" Version="1.0.0" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.0.0" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
