--- a/source/Appccelerate.StateMachine.props
+++ b/source/Appccelerate.StateMachine.props
@@ -9,4 +9,8 @@
     <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="All" />
+  </ItemGroup>
+
 </Project>
