temporarily disable TreatWarningsAsErrors to test Azure Devops pipeline

--- a/source/Appccelerate.StateMachine.props
+++ b/source/Appccelerate.StateMachine.props
@@ -1,8 +1,7 @@
 <Project>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <TreatSpecificWarningsAsErrors />
+    <TreatWarningsAsErrors>False</TreatWarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
