add documentation file generation for Release build
When building in 'Release' configuration a so called xml Documentation
file is generated. This automatically put into the NuGet package.
Whenever a User uses IntelliSense or similar the documentation of
classes etc is automatically shown.

--- a/source/Appccelerate.StateMachine/Appccelerate.StateMachine.csproj
+++ b/source/Appccelerate.StateMachine/Appccelerate.StateMachine.csproj
@@ -83,10 +83,16 @@
     </PackageReference>
   </ItemGroup>
 
+  <!-- license -->
   <ItemGroup>
-    <None Include="..\..\LICENSE" Pack="true" PackagePath=""/>
+    <None Include="..\..\LICENSE" Pack="true" PackagePath="" />
   </ItemGroup>
 
+  <!-- xml documentation file generation -->
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
+  </PropertyGroup>
+  
   <Import Project="..\Appccelerate.StateMachine.props" />
 
 </Project>
