enable 'TreatWarningsAsErrors' again

--- a/source/Appccelerate.StateMachine.props
+++ b/source/Appccelerate.StateMachine.props
@@ -1,7 +1,7 @@
 <Project>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-    <TreatWarningsAsErrors>False</TreatWarningsAsErrors>
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
