disable SA0001 'Xml comment analysis disabled' for debug build
Only the Release build is configured to generate an xml documentation
file. Because of that this warning would be raised in the Debug build.
It is now disabled for the Debug build.

--- a/source/Appccelerate.StateMachine/Appccelerate.StateMachine.csproj
+++ b/source/Appccelerate.StateMachine/Appccelerate.StateMachine.csproj
@@ -74,6 +74,9 @@
   <ItemGroup>
     <AdditionalFiles Include="stylecop.json" />
   </ItemGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>$(NoWarn),SA0001</NoWarn>
+  </PropertyGroup>
 
   <!-- versioning -->
   <ItemGroup>
