--- a/source/Appccelerate.StateMachine/Appccelerate.StateMachine.csproj
+++ b/source/Appccelerate.StateMachine/Appccelerate.StateMachine.csproj
@@ -79,7 +79,7 @@
   </PropertyGroup>
 
   <!-- versioning -->
-  <ItemGroup>
+  <ItemGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <PackageReference Include="MinVer" Version="1.1.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
