switch to auto incrementing minor version instead of patch

--- a/source/Appccelerate.StateMachine/Appccelerate.StateMachine.csproj
+++ b/source/Appccelerate.StateMachine/Appccelerate.StateMachine.csproj
@@ -85,6 +85,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
   </ItemGroup>
+  <PropertyGroup>
+    <MinVerAutoIncrement>Minor</MinVerAutoIncrement>
+  </PropertyGroup>
 
   <!-- license -->
   <ItemGroup>
