move Reporter implementations to sync SM namespace in preparation to create the same for the async SM

--- a/source/Appccelerate.StateMachine.Facts/Appccelerate.StateMachine.Facts.csproj
+++ b/source/Appccelerate.StateMachine.Facts/Appccelerate.StateMachine.Facts.csproj
@@ -24,6 +24,10 @@
     <ProjectReference Include="..\Appccelerate.StateMachine\Appccelerate.StateMachine.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="AsyncMachine\Reports\" />
+  </ItemGroup>
+
   <Import Project="..\Appccelerate.StateMachine.Facts.props" />  
   
 </Project>
